# document-ai-agent

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  UV_SETUP.md  hello.py  pyproject.toml  requirements.txt  run_sample.py
.claude/skills/: n8n-workflow.skill
.github/: copilot-instructions.md
base-docs/: PROJECT.md  REMINDER.md
base-docs/1_discovery/: AA_Project-Discovery-Template_Internal_en-us.xlsx  AGENT_PROMPT_BRD_GENERATION.md  AGENT_PROMPT_BRD_GENERATION_PLAIN.txt  AGENT_PROMPT_BRD_GENERATION_SYSTEM.txt  Discovery Q to BRD.xlsx  GSSHOP_BRD_Framework.xlsx  ~$GSSHOP_BRD_Framework.xlsx
base-docs/2_brd_sdr/: AA_3_BRD_SDR_v1.4 (Banking).xlsx
base-docs/3_tsd/: AA_3_TechSpec_WebSDK_en_v1.8.docx
base-docs/5_go_live/: AA_6.2_GoLiveChecklist-MobileEdgeSDK_RBG_eKYC.xlsx  AA_6.2_GoLiveChecklist-WebSDK_RBG+BB PostLogin.xlsx
n8n-cloud/: .gitignore  Dockerfile  LOCAL_DOCKER_SETUP.md  README.md  docker-compose.yml
n8n-cloud/v0.3/: AA_BRD_SDR_Test_01122026.xlsx  BRD_to_SDR_Workflow_Complete.json  BRD_to_SDR_Workflow_WebhookFixed.json  COMPLETE_WORKFLOW_GUIDE.md  DEBUG_500_ERROR.md  NO_INSTALL_SOLUTION.md  PYTHON_CONVERTER_GUIDE.md  json_to_excel.py  upload_test.html  upload_with_excel_download.html
n8n-cloud/v0.4/: BRD to SDR - JSON Response v0.4.json  BRD_TO_SDR_GUIDE.md  BRD_to_SDR_Workflow_JSONOnly.json  EXCEL_WRITE_V05_GUIDE.md  upload_with_excel_download.html
n8n-cloud/v0.5/: BRD to SDR - v0.5.json  IMPLEMENTATION_COMPLETE.md  docker-compose.yml
n8n-cloud/v0.6/: BRD to SDR - v0.6.json  GOOGLE_DRIVE_SETUP.md  (+4 more)
src/: __init__.py
(+24 files in other folders)
